make it look better
also put things in <body>

--- a/about.html
+++ b/about.html
@@ -1,38 +1,40 @@
 <!doctype html>
 <html lang="en-US">
-<head>
-<title>meow</title>
-<div id="first" style="width:25%">
-  <img src="cat.JPG" width="150" height="110"> <br>
-  <a href="index.html" class="cumblue">home</a><br>
-  <p class="cumwhite">about</p>
-  <hr style="color:white;">
-  <a href="about.html" class="cumblue">about me</a> <br>
-  <a href="projects.html" class="cumblue">current projects</a> <br>
-  <p class="cumwhite">other stuff</p>
-  <hr style="color:white;">
-  <a href="social.html" class="cumblue">social media</a> <br>
-  <a href="contact.html" class="cumblue">email and stuff</a>
-</div>
-<div id="second">
-<h2 class="cumwhite">about me</h2>
-<br>
-<h3 class="cumwhite">myself</h3>
-<hr style="color:white;">
-<p class="cumwhite">i like keeping a bunch of self too myself, but my name is marc.</p>
-<p class="cumwhite">if you'd like too call me by nickname thats okay, as long if its nice.</p>
-<br>
-<h3 class="cumwhite">likes/dislike</h3>
-<hr style="color:white;">
-<p class="cumwhite">as said before, i love linux. i'm using arch as of right now, but planning too switch too</p>
-<p class="cumwhite">bedrock linux. my favorite animes are obivously at first watamote, and second would be panty and stocking.</p>
-<p class="cumwhite">im not really much into rap, but i love metal and punk.</p>
-<br>
-<h3 class="cumwhite">associations</h3>
-<hr style="color:white;">
-<p class="cumwhite">i'm apart of 1123.best, which is a group my friends started and invited me. i'm working on some projects for that group.</p>
-<p class="cumwhite">i also have a couple friend groups but thats not important.</p>
-
-</div>
-<link rel="stylesheet" type="text/css" href="cum.css">
-</head>
+	<head>
+		<title>meow</title>
+		<link rel="stylesheet" type="text/css" href="cum.css">
+	</head>
+	<body>
+		<div id="first" style="width:25%">
+			<img src="cat.JPG" width="150" height="110"> <br>
+			<a href="index.html" class="cumblue">home</a><br>
+			<p class="cumwhite">about</p>
+			<hr style="color:white;">
+			<a href="about.html" class="cumblue">about me</a> <br>
+			<a href="projects.html" class="cumblue">current projects</a> <br>
+			<p class="cumwhite">other stuff</p>
+			<hr style="color:white;">
+			<a href="social.html" class="cumblue">social media</a> <br>
+			<a href="contact.html" class="cumblue">email and stuff</a>
+		</div>
+		<div id="second">
+			<h2 class="cumwhite">about me</h2>
+			<br>
+			<h3 class="cumwhite">myself</h3>
+			<hr style="color:white;">
+			<p class="cumwhite">i like keeping a bunch of self too myself, but my name is marc.</p>
+			<p class="cumwhite">if you'd like too call me by nickname thats okay, as long if its nice.</p>
+			<br>
+			<h3 class="cumwhite">likes/dislike</h3>
+			<hr style="color:white;">
+			<p class="cumwhite">as said before, i love linux. i'm using arch as of right now, but planning too switch too</p>
+			<p class="cumwhite">bedrock linux. my favorite animes are obivously at first watamote, and second would be panty and stocking.</p>
+			<p class="cumwhite">im not really much into rap, but i love metal and punk.</p>
+			<br>
+			<h3 class="cumwhite">associations</h3>
+			<hr style="color:white;">
+			<p class="cumwhite">i'm apart of 1123.best, which is a group my friends started and invited me. i'm working on some projects for that group.</p>
+			<p class="cumwhite">i also have a couple friend groups but thats not important.</p>
+		</div>
+	</body>
+</html>
