--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,30 @@
 <!doctype html>
 <html lang="en-US">
-<head>
-<title>meow</title>
-<div id="first" style="width:25%">
-  <img src="cat.JPG" width="150" height="110"> <br>
-  <a href="index.html" class="cumblue">home</a><br>
-  <p class="cumwhite">about</p>
-  <hr style="color:white;">
-  <a href="about.html" class="cumblue">about me</a> <br>
-  <a href="projects.html" class="cumblue">current projects</a> <br>
-  <p class="cumwhite">other stuff</p>
-  <hr style="color:white;">
-  <a href="social.html" class="cumblue">social media</a> <br>
-  <a href="contact.html" class="cumblue">email and stuff</a>
-</div>
-<div id="second">
-<h2 class="cumwhite">email and stuff</h2>
-<br>
-<h3 class="cumwhite">stuff</h3>
-<hr style="color:white;">
-<p class="cumwhite">my email - oppositekittie@gmail.com</p>
-<p class="cumwhite">my discord - oppositekittie#3847 (if i decline your friend request and need of contact send an email)</p>
-<br>
-
-</div>
-<link rel="stylesheet" type="text/css" href="cum.css">
-</head>
+	<head>
+		<title>meow</title>
+		<link rel="stylesheet" type="text/css" href="cum.css">
+	</head>
+	<body>
+		<div id="first" style="width:25%">
+			<img src="cat.JPG" width="150" height="110"> <br>
+			<a href="index.html" class="cumblue">home</a><br>
+			<p class="cumwhite">about</p>
+			<hr style="color:white;">
+			<a href="about.html" class="cumblue">about me</a> <br>
+			<a href="projects.html" class="cumblue">current projects</a> <br>
+			<p class="cumwhite">other stuff</p>
+			<hr style="color:white;">
+			<a href="social.html" class="cumblue">social media</a> <br>
+			<a href="contact.html" class="cumblue">email and stuff</a>
+		</div>
+		<div id="second">
+			<h2 class="cumwhite">email and stuff</h2>
+			<br>
+			<h3 class="cumwhite">stuff</h3>
+			<hr style="color:white;">
+			<p class="cumwhite">my email - oppositekittie@gmail.com</p>
+			<p class="cumwhite">my discord - oppositekittie#3847 (if i decline your friend request and need of contact send an email)</p>
+			<br>
+		</div>
+	</body>
+</html>
