--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
-<head>
-<title>meow</title>
-<meta name="description" content="oppositekittie's site">
-<div id="first" style="width:25%">
-  <img src="cat.JPG" width="150" height="110"> <br>
-  <a href="index.html" class="cumblue">home</a><br>
-  <p class="cumwhite">about</p>
-  <hr style="color:white;">
-  <a href="about.html" class="cumblue">about me</a> <br>
-  <a href="projects.html" class="cumblue">current projects</a> <br>
-  <p class="cumwhite">other stuff</p>
-  <hr style="color:white;">
-  <a href="social.html" class="cumblue">social media</a> <br>
-  <a href="contact.html" class="cumblue">email and stuff</a>
-</div>
-<div id="second">
-<h2 class="cumwhite">welcome too opposite's hellish site.</h2>
-<br>
-<p class="cumwhite">i like making websites and stuff, and python a bit.</p>
-<br>
-<h3 class="cumwhite">stardate 98532.15</h3>
-<hr style="color:white;">
-<p class="cumwhite">i've launched and finished my website! this is where i will put most updates about me or my site if i remember.</p>
-<meta property="og:title" content="kittie">
-<meta property="og:type" content="website">
-<meta property="og:image" content="https://catgirl.ga/cum.png">
-<meta property="og:url" content="https://1123.best">
-<meta property="og:description" content="opposite's site.">
-</div>
-<link rel="stylesheet" type="text/css" href="cum.css">
-</head>
-
+	<head>
+		<title>meow</title>
+		<meta name="description" content="oppositekittie's site">
+		<link rel="stylesheet" type="text/css" href="cum.css">
+	</head>
+	<body>
+		<div id="first" style="width:25%">
+			<img src="cat.JPG" width="150" height="110"> <br>
+			<a href="index.html" class="cumblue">home</a><br>
+			<p class="cumwhite">about</p>
+			<hr style="color:white;">
+			<a href="about.html" class="cumblue">about me</a> <br>
+			<a href="projects.html" class="cumblue">current projects</a> <br>
+			<p class="cumwhite">other stuff</p>
+			<hr style="color:white;">
+			<a href="social.html" class="cumblue">social media</a> <br>
+			<a href="contact.html" class="cumblue">email and stuff</a>
+		</div>
+		<div id="second">
+			<h2 class="cumwhite">welcome too opposite's hellish site.</h2>
+			<br>
+			<p class="cumwhite">i like making websites and stuff, and python a bit.</p>
+			<br>
+			<h3 class="cumwhite">stardate 98532.15</h3>
+			<hr style="color:white;">
+			<p class="cumwhite">i've launched and finished my website! this is where i will put most updates about me or my site if i remember.</p>
+			<meta property="og:title" content="kittie">
+			<meta property="og:type" content="website">
+			<meta property="og:image" content="https://catgirl.ga/cum.png">
+			<meta property="og:url" content="https://1123.best">
+			<meta property="og:description" content="opposite's site.">
+		</div>
+	</body>
+</html>
