--- a/projects.html
+++ b/projects.html
@@ -1,31 +1,33 @@
 <!doctype html>
 <html lang="en-US">
-<head>
-<title>meow</title>
-<div id="first" style="width:25%">
-  <img src="cat.JPG" width="150" height="110"> <br>
-  <a href="index.html" class="cumblue">home</a><br>
-  <p class="cumwhite">about</p>
-  <hr style="color:white;">
-  <a href="about.html" class="cumblue">about me</a> <br>
-  <a href="projects.html" class="cumblue">current projects</a> <br>
-  <p class="cumwhite">other stuff</p>
-  <hr style="color:white;">
-  <a href="social.html" class="cumblue">social media</a> <br>
-  <a href="contact.html" class="cumblue">email and stuff</a>
-</div>
-<div id="second">
-<h2 class="cumwhite">current or future projects</h2>
-<br>
-<h3 class="cumwhite">projects</h3>
-<hr style="color:white;">
-<ul class="cummwhite">
-    <li>1123forums</li>
-    <li>1123wiki, anarchy wiki.</li>
-    <li>1123mc</li>
-</ul>
-<br>
-
-</div>
-<link rel="stylesheet" type="text/css" href="cum.css">
-</head>
+	<head>
+		<title>meow</title>
+		<link rel="stylesheet" type="text/css" href="cum.css">
+	</head>
+	<body>
+		<div id="first" style="width:25%">
+			<img src="cat.JPG" width="150" height="110"> <br>
+			<a href="index.html" class="cumblue">home</a><br>
+			<p class="cumwhite">about</p>
+			<hr style="color:white;">
+			<a href="about.html" class="cumblue">about me</a> <br>
+			<a href="projects.html" class="cumblue">current projects</a> <br>
+			<p class="cumwhite">other stuff</p>
+			<hr style="color:white;">
+			<a href="social.html" class="cumblue">social media</a> <br>
+			<a href="contact.html" class="cumblue">email and stuff</a>
+		</div>
+		<div id="second">
+			<h2 class="cumwhite">current or future projects</h2>
+			<br>
+			<h3 class="cumwhite">projects</h3>
+			<hr style="color:white;">
+			<ul class="cummwhite">
+				<li>1123forums</li>
+				<li>1123wiki, anarchy wiki.</li>
+				<li>1123mc</li>
+			</ul>
+			<br>
+		</div>
+	</body>
+</html>
